<?xml version="1.0" encoding="utf-8"?>
<layout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".launch.welcome.WelcomeFragment">

   <!-- <data>
    <variable name="viewmodelWelcome"
              type="boris.com.appbemyspace.launch_Viewmodel.WelcomeViewModel"/>
    android:onClick="@{() -> viewmodelWelcome.goToLogin()}"
</data> -->


<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/welcome_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkBlueColor">


        <TextView
                android:id="@+id/welcomeText_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to"
                style="@style/white_bold_text_style"
                android:textSize="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/left_right_margin_value"/>

        <TextView
                android:id="@+id/welcomeText_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/bemyspace"
                style="@style/white_bold_text_style"
                android:textSize="32dp"
                app:layout_constraintTop_toBottomOf="@+id/welcomeText_1"
                app:layout_constraintStart_toStartOf="@+id/welcomeText_1"
                app:layout_constraintEnd_toEndOf="@+id/welcomeText_1"/>

        <Button
                android:id="@+id/create_account_btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                style="@style/button_style"
                android:text="@string/create_account"
                app:layout_constraintTop_toBottomOf="@+id/welcomeText_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/left_right_margin_value"/>

        <TextView
                android:id="@+id/danceme_login_option_textview_1"
                android:text="@string/i_want_to_login_with_my"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/white_text_style"
                android:textSize="24dp"
                app:layout_constraintTop_toBottomOf="@+id/create_account_btn"
                android:layout_marginTop="@dimen/left_right_margin_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/danceme_login_option_textview_2"
                android:text="@string/danceme_account"
                style="@style/white_bold_text_style"
                android:textSize="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/danceme_login_option_textview_1"
                app:layout_constraintStart_toStartOf="@+id/danceme_login_option_textview_1"
                app:layout_constraintTop_toBottomOf="@+id/danceme_login_option_textview_1"/>


        <TextView
                android:id="@+id/login_textview_1"
                android:text="@string/i_already_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/white_text_style"
                android:textSize="24dp"
                app:layout_constraintStart_toStartOf="@+id/danceme_login_option_textview_2"
                app:layout_constraintEnd_toEndOf="@+id/danceme_login_option_textview_2"
                app:layout_constraintTop_toBottomOf="@+id/danceme_login_option_textview_2"
                android:layout_marginTop="@dimen/left_right_margin_value"/>

        <TextView
                android:id="@+id/login_textview_2"
                android:text="@string/login"
                style="@style/white_bold_text_style"
                android:textSize="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="@+id/login_textview_1"
                app:layout_constraintStart_toStartOf="@+id/login_textview_1"
                app:layout_constraintTop_toBottomOf="@+id/login_textview_1"/>


        <TextView
                android:id="@+id/policity_textview"
                android:text="@string/policity_string"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_textview_2"
                android:layout_marginTop="@dimen/left_right_margin_value"/>




    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

</layout>