<?xml version="1.0" encoding="utf-8"?>
<layout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".launch.login.LoginFragment">

<data>
    <variable name="viewmodelLogin"
              type="boris.com.appbemyspace.launch.login.LoginViewModel"/>

</data>

<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkBlueColor"
            android:layout_gravity="center">


        <TextView
                android:id="@+id/welcomeText_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back_to"
                style="@style/white_bold_text_style"
                android:textSize="24dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
                android:id="@+id/welcomeText_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bemyspace"
                style="@style/white_bold_text_style"
                android:textSize="32dp"
                app:layout_constraintTop_toBottomOf="@+id/welcomeText_1"
                app:layout_constraintStart_toStartOf="@+id/welcomeText_1"
                app:layout_constraintEnd_toEndOf="@+id/welcomeText_1" app:layout_constraintHorizontal_bias="0.509"/>


        <EditText android:id="@+id/input_username"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textEmailAddress"
                  android:textColor="@color/whiteTextColor"
                  android:hint="@string/username"
                  android:text="@={viewmodelLogin.getUsername}"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="@dimen/left_right_margin_value"
                  android:layout_marginTop="24dp"
                  app:layout_constraintTop_toBottomOf="@+id/welcomeText_2"
                  android:layout_marginStart="@dimen/left_right_margin_value"
                  app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"/>

        <EditText android:id="@+id/input_password"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:textColor="@color/whiteTextColor"
                  android:hint="@string/password"
                  android:text="@={viewmodelLogin.getPassword}"
                  android:layout_marginTop="@dimen/item_margin_value"
                  app:layout_constraintTop_toBottomOf="@+id/input_username"
                  app:layout_constraintStart_toStartOf="@+id/input_username"
                  app:layout_constraintEnd_toEndOf="@+id/input_username"
                  android:layout_marginEnd="@dimen/left_right_margin_value"
                  android:layout_marginStart="@dimen/left_right_margin_value" />


        <TextView
                android:id="@+id/forgot_email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i_forgot_my_password"
                style="@style/white_bold_text_style"
                android:textSize="24dp"
                app:layout_constraintStart_toStartOf="@+id/input_password"
                app:layout_constraintEnd_toEndOf="@+id/input_password"
                app:layout_constraintTop_toBottomOf="@+id/input_password"
                android:layout_marginTop="@dimen/left_right_margin_value"/>


        <TextView
                android:id="@+id/create_account_textview_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i_want_to_create_a"
                style="@style/white_text_style"
                android:textSize="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgot_email_text"
                android:layout_marginTop="@dimen/left_right_margin_value"/>

        <TextView
                android:id="@+id/create_account_textview_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_account"
                style="@style/white_bold_text_style"
                android:textSize="32dp"
                app:layout_constraintTop_toBottomOf="@+id/create_account_textview_1"
                app:layout_constraintStart_toStartOf="@+id/create_account_textview_1"
                app:layout_constraintEnd_toEndOf="@+id/create_account_textview_1"
        />


        <Button
                android:id="@+id/login_btn_fragment"
                android:layout_width="@dimen/button_width"
                android:layout_height="47dp"
                style="@style/button_style"
                android:text="@string/login"
                android:onClick="@{() -> viewmodelLogin.login()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_account_textview_2"
                android:layout_marginTop="@dimen/left_right_margin_value"
                android:layout_marginBottom="@dimen/parent_margin_value"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

</layout>
